--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -25,9 +25,9 @@ jobs:
       - name: release message
         id: get_trigger_mode
         run: |
-          bash .github/utils/utils.sh --type 11 \
-            --tag-name "${{ inputs.release_version }}" \
-            --bot-webhook ${{ env.RELEASE_BOT_WEBHOOK }}
+#          bash .github/utils/utils.sh --type 11 \
+#            --tag-name "${{ inputs.release_version }}" \
+#            --bot-webhook ${{ env.RELEASE_BOT_WEBHOOK }}
 
           TEST_PACKAGES=`bash .github/utils/utils.sh --type 16 \
               --trigger-type "[test]" \
@@ -57,15 +57,15 @@ jobs:
         with:
           go-version: "${{ env.GO_VERSION }}"
 
-      - name: Install golangci-lint
-        if: matrix.ops == 'lint'
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+#      - name: Install golangci-lint
+#        if: matrix.ops == 'lint'
+#        run: |
+#          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
 
-      - name: make ${{ matrix.ops }}
-        if: ${{ ! contains(matrix.ops, '/') }}
-        run: |
-          make ${{ matrix.ops }}
+#      - name: make ${{ matrix.ops }}
+#        if: ${{ ! contains(matrix.ops, '/') }}
+#        run: |
+#          make ${{ matrix.ops }}
 
       - name: make test ${{ matrix.ops }}
         if: ${{ contains(matrix.ops, '/') }}
@@ -74,29 +74,29 @@ jobs:
               make test TEST_PACKAGES=./${{ matrix.ops }}/...
           fi
 
-  release-version:
-    needs: release-test
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout branch ${{ github.ref_name }}
-        uses: actions/checkout@v4
-      - name: push tag
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          custom_tag: ${{ inputs.release_version }}
-          github_token: ${{ env.GITHUB_TOKEN }}
-          tag_prefix: ""
-
-  send-message:
-    runs-on: ubuntu-latest
-    needs: release-version
-    if: ${{ failure() || cancelled() }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: send message
-        run: |
-          bash .github/utils/utils.sh --type 12 \
-            --tag-name ${{ inputs.release_version }} \
-            --content "release\u00a0${{ inputs.release_version }}\u00a0error"\
-            --bot-webhook ${{ env.RELEASE_BOT_WEBHOOK }} \
-            --run-url "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
+#  release-version:
+#    needs: release-test
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: checkout branch ${{ github.ref_name }}
+#        uses: actions/checkout@v4
+#      - name: push tag
+#        uses: mathieudutour/github-tag-action@v6.1
+#        with:
+#          custom_tag: ${{ inputs.release_version }}
+#          github_token: ${{ env.GITHUB_TOKEN }}
+#          tag_prefix: ""
+#
+#  send-message:
+#    runs-on: ubuntu-latest
+#    needs: release-version
+#    if: ${{ failure() || cancelled() }}
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: send message
+#        run: |
+#          bash .github/utils/utils.sh --type 12 \
+#            --tag-name ${{ inputs.release_version }} \
+#            --content "release\u00a0${{ inputs.release_version }}\u00a0error"\
+#            --bot-webhook ${{ env.RELEASE_BOT_WEBHOOK }} \
+#            --run-url "$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
